--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCKYB3W802"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-LCKYB3W802');
+        </script>
+    </head>
     <body>
-    <h1>Coming Soon</h1>
+        <h1>Coming Soon</h1>
     </body>
 </html>
