--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
-<html>
-    <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCKYB3W802"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+<!DOCTYPE html>
+<html lang="en">
 
-            gtag('config', 'G-LCKYB3W802');
-        </script>
-    </head>
-    <body>
-        <h1>Coming Soon</h1>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="about" content="Jonathan Goenadibrata's Portfolio" />
+    <meta name="keywords" content="Jonathan, Goenadibrata, Personal Website, Portfolio, Resume, Mechanical Engineering Student, Mechanical, Engineer" />
+    <meta name="author" content="Jonathan Goenadibrata" />
+    <meta name="description" content="Gabriela Shirley is a senior majoring in Mechanical Engineering at the University of California, San Diego." />
+    <link rel="icon" href="assets/profilepic.JPG" />
+    <link rel="stylesheet" href="style.css" type="text/css" defer />
+    <title>Jonathan Goenadibrata's Portfolio</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCKYB3W802"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-LCKYB3W802");
+    </script>
+</head>
+
+<body>
+    <section id="intro">
+        <h3>Hey! My name is...</h3>
+        <h1>Jonathan Goenadibrata</h1>
+        <h4>
+            I am a future <strong>Mechanical Engineer</strong> interested in anything <strong>Controls & Robotics</strong> related. I am currently an
+            <strong>UC San Diego</strong> Undergraduate graduating in Spring 2021
+        </h4>
+    </section>
+    <section id="about"></section>
+    <section id="project"></section>
+    <section id="contact"></section>
+</body>
+
 </html>
